--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  
   "name": "moviefreaks",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://neerajram30.github.io/moviefreakz",
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "firebase": "^8.6.3",
+    "gh-pages": "^3.2.0",
     "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-youtube": "^7.13.1",
+    "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
